--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "fs-app-template",
-  "version": "2.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
-  "main": "index.js",
+  "name": "equidist",
+  "version": "1.0.0",
+  "description": "Equidist project to get a user to their destination",
+  "main": "index.ts",
   "scripts": {
     "build": "webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "seed": "node script/seed.js",
-    "start": "node server",
+    "start": "node server/index.ts",
     "start:dev": "npm run build:dev & npm run start-server",
     "start:dev:logger": "LOGGING=true npm run start:dev",
     "start:dev:seed": "SEED=true npm run start:dev",
-    "start-server": "JWT=shh nodemon server -e html,js,scss --ignore public --ignore client",
+    "start-server": "JWT=shh nodemon server/index.ts -e html,js,scss --ignore public --ignore client",
     "test": "NODE_ENV=test JWT=a_secret mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" --require @babel/register --require esm ",
     "test:dev": "npm run test -- --watch",
     "test:dev:models": "npm run test:dev -- --grep=model",
@@ -20,6 +20,11 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@types/morgan": "^1.9.4",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "express": "^4.18.2",
@@ -34,6 +39,8 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/register": "^7.18.9",
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
     "axios": "^1.1.3",
     "axios-mock-adapter": "^1.21.2",
     "babel-loader": "^8.2.5",
@@ -46,7 +53,11 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "redux-logger": "^3.0.6",
+    "source-map-loader": "^4.0.1",
     "supertest": "^6.3.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
