--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@types/morgan": "^1.9.4",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -27,6 +28,7 @@
     "@types/react-router-dom": "^5.3.3",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -40,6 +42,7 @@
     "@babel/register": "^7.18.9",
     "@reduxjs/toolkit": "^1.8.6",
     "@types/express": "^4.17.15",
+    "@types/google.maps": "^3.51.0",
     "@types/node": "^18.11.18",
     "axios": "^1.1.3",
     "axios-mock-adapter": "^1.21.2",
