--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules
-dist/bundle.js
-dist/bundle.js.map
 .DS_Store
 npm-debug.log
 yarn-error.log
 package-lock.json
 .env
+/dist/bundle.js
+/dist/bundle.js.map
