--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@emotion/styled": "^11.10.5",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@mui/material": "^5.11.5",
     "@types/morgan": "^1.9.4",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
